--- a/FRONT/src/app/catalogue_vendeur/catalogue_vendeur.component.css
+++ b/FRONT/src/app/catalogue_vendeur/catalogue_vendeur.component.css
@@ -152,3 +152,8 @@ button {
 .card-content p {
     margin: 5px 0;
 }
+
+.card:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
