mini-update catalogue 2

--- a/FRONT/src/app/catalogue/catalogue.component.html
+++ b/FRONT/src/app/catalogue/catalogue.component.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Liste des tournois</title>
+    <link rel="stylesheet" href="./catalogue.component.css"> <!-- fichier CSS -->
 </head>
 
 <body>
@@ -45,4 +46,5 @@
 
     </div>
 </body>
+
 </html>
