mise à jourcatalogue back

--- a/FRONT/src/app/catalogue/catalogue.component.html
+++ b/FRONT/src/app/catalogue/catalogue.component.html
@@ -17,13 +17,13 @@
 
             <div style="display: flex; align-items: center; width: 100%">
                 <div style="flex-grow: 1;">
-                    <form method="get" action="/R1" style="display: flex;">
-                        <input type="text" name="search" placeholder="Rechercher..." style="flex-grow: 1; height: 5vh; border: 2px solid black; outline: none; font-size: 2vw;" />
-                        <input id="search-button" type="submit" Value=""/>
-                    </form>
-                </div>
-                <div>
-                    <button id="reglage-button" onclick="openFilterPopup()"></button>
+                    <!--Make sure the form has the autocomplete function switched off:-->
+                    <!-- <form autocomplete="off" action="/action_page.php">
+                        <div class="autocomplete" style="width:300px;">
+                        <input id="myInput" type="text" name="myPlayer" placeholder="Joueur">
+                        </div>
+                        <input type="submit">
+                    </form>-->
                 </div>
             </div>
             <br>
