resolve bug menu gestionnaire

--- a/FRONT/src/app/menu/menu.component.html
+++ b/FRONT/src/app/menu/menu.component.html
@@ -74,8 +74,8 @@
                     <li><a href="/depot" target="content-frame">Dépot</a></li>
                     <li><a href="/retrait" target="content-frame">Retrait</a></li>
                     <li><a href="/mise_en_vente" target="content-frame">Mise en vente </a></li>
-                    <li><a href="/enregistrer_achat" target="content-frame">Enregister Achat</a></li>
-                    <li><a href="/check_achat" target="content-frame">Payer Vendeur</a></li>
+                    <li><a href="/enregistrer-achat" target="content-frame">Enregister Achat</a></li>
+                    <li><a href="/payer-vendeur" target="content-frame">Payer Vendeur</a></li>
                     <li><a href="/bilan" target="content-frame">Bilan</a></li>
                 </ul>
             </div>
